--- a/server/views/NavjyotiOther.ejs
+++ b/server/views/NavjyotiOther.ejs
@@ -12,7 +12,7 @@
       }
 
       html body {
-         zoom: 100%;
+         zoom: 80%;
       }
 
       #table2 {
@@ -33,12 +33,12 @@
             <thead>
                <tr style="text-align: center;">
                   <th>
-                     <h1 style="font-size: 50px;margin: 0;">+ नवज्योति नेत्र चिकित्सालय +</h1>
+                     <h1 style="font-size: 60px;margin: 0;">+ नवज्योति नेत्र चिकित्सालय +</h1>
                   </th>
                </tr>
                <tr>
                   <th>
-                     <h4 style="font-size: 20px;margin: 0;">बजाज एजेंसी के पास, संडीला रोड, गौसगंज (हरदोई)</h4>
+                     <h4 style="font-size: 30px;margin: 0;">बजाज एजेंसी के पास, सण्डीला रोड, गौसगंज (हरदोई)</h4>
                   </th>
                </tr>
             </thead>
@@ -68,7 +68,7 @@
 
                <tr style="text-align: center;">
                   <td colspan="3">
-                     <span style="font-size: 20px; border: 1px solid #000;"><b>REG. NO.:</b> RMEE2230553</span>
+                     <span style="font-size: 20px; border: 1px solid #000;padding:3px 15px;border-bottom: 0px solid #000;"><b>REG. NO.:</b> RMEE2230553</span>
                   </td>
                </tr>
             </thead>
@@ -80,22 +80,22 @@
                   <td>
                      <span style="font-size: 18px;"><b>Dr.Sumit Rastogi</b></span>
                   </td>
-                  <td>
+                  <td style="padding-left: 5%;">
                      <span style="font-size: 18px;"><b>Dr.Pratyush Kumar</b></span>
                   </td>
-                  <td>
+                  <td style="padding-left: 5%;">
                      <span style="font-size: 18px;"><b>Dr.Sandeep Sharma</b></span>
                   </td>
                </tr>
                <tr style="text-align: left;">
                   <td>
-                     <span style="font-size: 16px;">MBBS (K.G.M.C.,Lucknow)<br> MS Ophthalmology <br> Reg No.- 46128 <br> Fellow Aravind Eye Hospital, Madurai</span>
+                     <span style="font-size: 17px;">MBBS (K.G.M.C.,Lucknow)<br> MS Ophthalmology <br> Reg No.- 46128 <br> Fellow Aravind Eye Hospital, Madurai</span>
                   </td>
-                  <td>
-                     <span style="font-size: 16px;">D OPT (S.P.P.G.I.,Lucknow)<br> BSC OPT (S.S.P.M.C.,kanpur) <br> Reg No.- 1452  </span>
+                  <td style="padding-left: 5%;">
+                     <span style="font-size: 17px;">D OPT (S.P.P.G.I.,Lucknow)<br> BSC OPT (S.S.P.M.C.,kanpur) <br> Reg No.- 1452  </span>
                   </td>
-                  <td>
-                     <span style="font-size: 16px;">M.B.B.S , M.S., FAEH<br> Consultant Ophthalmologist <br> Reg No.- 54966 <br> Banaras Hindu University </span>
+                  <td style="padding-left: 5%;">
+                     <span style="font-size: 17px;">M.B.B.S , M.S., FAEH<br> Consultant Ophthalmologist <br> Reg No.- 54966 <br> Banaras Hindu University </span>
                   </td>
                </tr>
             </thead>
@@ -106,8 +106,8 @@
    <section style="width: 100%; ">
       <!-- left side -->
       <div style="width: 29%; float: left; height: 800px; ">
-         <div style="font-size: 10px; width: 90%; height: 100px;"></div>
-         <div style="font-size: 15px; width: 90%; height: 250px;">
+         <div style="font-size: 10px; width: 90%; height: 130px;"></div>
+         <div style="font-size: 18px; width: 90%; height: 320px; line-height: 24px;">
             <h4 style="margin: 0;">OPD FACILITIES</h4>
                <li>Computer Assisted Refraction</li>
                <li>Slit Lamp Biomicroscopy </li>
@@ -121,7 +121,7 @@
                <li>Phoreptarised Eye Testing  </li>
                <li>Fundus Examination </li>
          </div>
-         <div style="font-size: 15px; width: 90%; height: 250px;">
+         <div style="font-size: 18px; width: 90%; height: 320px; line-height: 24px;">
             <h4 style="margin: 0;">SURGERY FACILITIES</h4>
             <li>ECCE, SICS <br> (Small Incision Cataract Surgery) </li>
             <li>Phocoemulsification </li>
@@ -135,14 +135,14 @@
          </div>
 
          <div style=" width: 90%; height: 100px;">
-            <h4 style="margin: 0;">Ayushman Facility </h4>
-            <img src="<%=data.PmLogo%>" alt="Ayushman Facility" width="100%">
+            <h4 style="margin: 0;font-size: 18px; padding-bottom: 2%;">Ayushman Facility </h4>
+            <img src="<%=data.PmLogo%>" alt="Ayushman Facility" width="100%" >
          </div>
       </div>
      
       <!-- right side  -->
-      <div style="width: 70%; float: right; border-left: 1px solid #000; height: 800px;">
-         <table style="width: 60%; float: left; line-height: 17px; font-size: 16px;">
+      <div style="width: 70%; float: right; border-left: 1px solid #000; height: 1080px;">
+         <table style="width: 60%; float: left; line-height: 19px; font-size: 18px; padding-top: 2%; padding-bottom: 2%;">
             <thead >
                <tr>
                   <th style="text-align: left; width: 20%;">Cust_ID</th>
@@ -162,7 +162,7 @@
                </tr>
             </thead>
          </table>
-         <table style="width: 40%; float: right; font-size: 16px;">
+         <table style="width: 40%; float: right; font-size: 18px;padding-top: 2%; padding-bottom: 2%;">
             <thead>
                <tr>
                   <th style="text-align: left;">Vising Date <br> Moblie No. <br> Gender </th>
@@ -174,23 +174,23 @@
       <!-- power spec -->
       <% if (data.mode === 'other') { %>
          <section>
-            <table style="width: 60%;  font-size: 15px; text-align: left; padding-left: 5%;">
+            <table style="width: 80%; font-size: 18px; text-align: left; padding-left: 5%;">
    
-               <tr>
-                   <th rowspan="2" >VN : --</th>
+               <tr style="height: 50px;">
+                   <th rowspan="2" style="width:25%">VN : --</th>
                    <td style="text-align: left;">R - <%=data.other.R_VN%></td>
                </tr>
                <tr>
                    <td>L - <%=data.other.L_VN%></td>
                </tr>
-               <tr>
+               <tr style="height: 50px;">
                    <th rowspan="2">TN : --</th>
                    <td>R - <%=data.other.R_TN%></td>
                </tr>
                <tr>
                    <td>L - <%=data.other.L_TN%></td>
                </tr>
-               <tr>
+               <tr style="height: 50px;">
                    <th rowspan="2">SY/KR : --</th>
                    <td>R - <%=data.other.R_KR%></td>
                </tr>
@@ -218,61 +218,61 @@
              
    
            </table>
-           <table style="width: 100%;  font-size: 15px; text-align: left; padding-left: 5%;">
+           <table style="width: 100%;  font-size: 18px; text-align: left; padding-left: 5%;">
             <tr>
-                <th style="padding-top: 20px;">Diagnosis:</th>
-                <td style="padding-top: 20px;"><%=data.other.Diagnosis%></td>
+                <th style="padding-top: 40px;">Diagnosis:</th>
+                <td style="padding-top: 40px;"><%=data.other.Diagnosis%></td>
             </tr>
             <tr>
-                <th style="width: 20px; padding-top: 20px;">Treatment:</th>
-                <td style="padding-top: 20px;"><%=data.other.Treatment%></td>
+                <th style="width: 20px; padding-top: 40px;">Treatment:</th>
+                <td style="padding-top: 40px;"><%=data.other.Treatment%></td>
             </tr>
 
         </table>
          </section>
-         <section style="width: 100%; padding-left: 5%;margin-top: 5%; height: 200px;">
+         <section style="width: 100%; padding-left: 5%;margin-top: 10%; height: 200px;">
          <% if (data.otherNoPower === false) { %>
-               <table  id="table2" style="width: 90%;">
+               <table  id="table2" style="width: 90%; text-align: center; ">
                   <thead>
-                     <tr>
+                     <tr style="font-size: 20px;">
                         <th colspan="1"></th>
                         <th colspan="4">Right</th>
                         <th colspan="4">Left</th>
                      </tr>
                   </thead>
                   <tbody>
-                     <tr>
-                        <td></td>
-                        <td>SPH</td>
-                        <td>CYL</td>
-                        <td>AXIS</td>
-                        <td>VP</td>
-                        <td>SPH</td>
-                        <td>CYL</td>
-                        <td>AXIS</td>
-                        <td>VP</td>
+                     <tr style="font-size: 18px;">
+                        <td style="padding:5px"></td>
+                        <td style="padding:5px">SPH</td>
+                        <td style="padding:5px">CYL</td>
+                        <td style="padding:5px">AXIS</td>
+                        <td style="padding:5px">VP</td>
+                        <td style="padding:5px">SPH</td>
+                        <td style="padding:5px">CYL</td>
+                        <td style="padding:5px">AXIS</td>
+                        <td style="padding:5px">VP</td>
                      </tr>
-                     <tr>
-                        <td>Distance</td>
-                        <td> <%=data.powerList.REDPSPH%> </td> 
-                        <td> <%=data.powerList.REDPCYL%> </td> 
-                        <td> <%=data.powerList.REDPAxis%> </td> 
-                        <td> <%=data.powerList.REDPVA%> </td> 
-                        <td> <%=data.powerList.LEDPSPH%> </td> 
-                        <td> <%=data.powerList.LEDPCYL%> </td> 
-                        <td> <%=data.powerList.LEDPAxis%> </td> 
-                        <td> <%=data.powerList.LEDPVA%> </td>
+                     <tr style="font-size: 18px;">
+                        <td style="padding:5px">Distance</td>
+                        <td style="padding:5px"> <%=data.powerList.REDPSPH%> </td> 
+                        <td style="padding:5px"> <%=data.powerList.REDPCYL%> </td> 
+                        <td style="padding:5px"> <%=data.powerList.REDPAxis%> </td> 
+                        <td style="padding:5px"> <%=data.powerList.REDPVA%> </td> 
+                        <td style="padding:5px"> <%=data.powerList.LEDPSPH%> </td> 
+                        <td style="padding:5px"> <%=data.powerList.LEDPCYL%> </td> 
+                        <td style="padding:5px"> <%=data.powerList.LEDPAxis%> </td> 
+                        <td style="padding:5px"> <%=data.powerList.LEDPVA%> </td>
                      </tr>
-                     <tr>
-                        <td>Near</td>
-                        <td> <%=data.powerList.RENPSPH%> </td> 
-                        <td> <%=data.powerList.RENPCYL%> </td> 
-                        <td> <%=data.powerList.RENPAxis%> </td> 
-                        <td> <%=data.powerList.RENPVA%> </td> 
-                        <td > <%=data.powerList.LENPSPH%> </td> 
-                         <td > <%=data.powerList.LENPCYL%> </td> 
-                         <td > <%=data.powerList.LENPAxis%> </td> 
-                         <td > <%=data.powerList.LENPVA%> </td> 
+                     <tr style="font-size: 18px;">
+                        <td style="padding:5px">Near</td>
+                        <td style="padding:5px"> <%=data.powerList.RENPSPH%> </td> 
+                        <td style="padding:5px"> <%=data.powerList.RENPCYL%> </td> 
+                        <td style="padding:5px"> <%=data.powerList.RENPAxis%> </td> 
+                        <td style="padding:5px"> <%=data.powerList.RENPVA%> </td> 
+                        <td style="padding:5px"> <%=data.powerList.LENPSPH%> </td> 
+                        <td style="padding:5px"> <%=data.powerList.LENPCYL%> </td> 
+                        <td style="padding:5px"> <%=data.powerList.LENPAxis%> </td> 
+                        <td style="padding:5px"> <%=data.powerList.LENPVA%> </td> 
                      </tr>
                   </tbody>
                </table>
