--- a/web1/src/app/admin/company-login-history/company-login-history.component.html
+++ b/web1/src/app/admin/company-login-history/company-login-history.component.html
@@ -35,6 +35,38 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row m-2">
+                            <div class="col-md-2">
+                                <mat-form-field class="example-full-width mb-0" >
+                                    <mat-label>From Date</mat-label>
+                                    <input matInput name="date1" type="date"  [(ngModel)]="filter.date1"  />
+                                  
+                                </mat-form-field>
+                            </div>
+                            <div class="col-md-2">
+                                <mat-form-field class="example-full-width mb-0">
+                                    <mat-label>To Date</mat-label>
+                                    <input matInput  name="date2" type="date" [(ngModel)]="filter.date2" />
+                                   
+                                </mat-form-field>
+                            </div>
+                            <div class="col-md-2">
+                                <mat-form-field class="example-full-width mb-0">
+                                    <mat-label>User</mat-label>
+                                    <mat-select name="UserID" [(ngModel)]="filter.UserID">
+                                        <mat-option [value]="0">All</mat-option>
+                                        <mat-option [value]="u.ID" *ngFor="let u of userList  let i = index;"> 
+                                            {{u.Name}} 
+                                        </mat-option>
+                                    </mat-select>
+                                </mat-form-field>
+                            </div> 
+                            <div class="col-md-2">
+                                <button class="me-3" mat-raised-button color="primary"> Search</button>
+                                <button  type="button" mat-raised-button color="warn"> Reset</button>
+                            </div>
+                            
+                        </div>
                         <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
                             <div style="overflow-x:auto;overflow:auto;height:530px; " class="table-responsive">
                                 <table style="width:100%;" id="exportsss"
