--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -561,7 +561,7 @@
                                                                     <tr>
                                                                         <th>Actions</th>
                                                                         <th>S.No</th>
-                                                                        <th>CreatedOn</th>
+                                                                        <th>VisitDate</th>
                                                                         <th>Family</th>
                                                                         <th>Doctor</th>
                                                                         <th>REDPSPH</th>
@@ -618,7 +618,7 @@
                                                                         </td>
                                                                         <td class="text-left">{{spectacleLists.length -
                                                                             i }}</td>
-                                                                        <td>{{dateFormat(s.CreatedOn)}}</td>
+                                                                        <td>{{dateFormat(s.VisitDate)}}</td>
                                                                         <td>{{s.Family}}</td>
                                                                         <td>{{s.RefferedByDoc}}</td>
                                                                         <td>{{s.REDPSPH}}</td>
@@ -934,7 +934,7 @@
                                                                     <tr>
                                                                         <th>Actions</th>
                                                                         <th>S.No</th>
-                                                                        <th>CreatedOn</th>
+                                                                        <th>VisitDate</th>
                                                                         <th>Family</th>
                                                                         <th>Doctor</th>
                                                                         <th>REDPSPH</th>
@@ -996,7 +996,7 @@
                                                                         </td>
                                                                         <td class="text-left">{{contactList.length - i
                                                                             }}</td>
-                                                                        <td>{{dateFormat(cl.CreatedOn)}}</td>
+                                                                        <td>{{dateFormat(cl.VisitDate)}}</td>
                                                                         <td>{{cl.Family}}</td>
                                                                         <td>{{cl.RefferedByDoc}}</td>
                                                                         <td>{{cl.REDPSPH}}</td>
@@ -1180,7 +1180,7 @@
                                                                     <tr>
                                                                         <th>Actions</th>
                                                                         <th>S.No</th>
-                                                                        <th>CreatedOn</th>
+                                                                        <th>VisitDate</th>
                                                                         <th>Family</th>
                                                                         <th>Doctor</th>
                                                                         <th>BP</th>
@@ -1216,7 +1216,7 @@
                                                                         </td>
                                                                         <td class="text-left">{{otherList.length - i }}
                                                                         </td>
-                                                                        <td>{{dateFormat(other.CreatedOn)}}</td>
+                                                                        <td>{{dateFormat(other.VisitDate)}}</td>
                                                                         <td>{{other.Family}}</td>
                                                                         <td>{{other.RefferedByDoc}}</td>
                                                                         <td>{{other.BP}}</td>
