--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -493,7 +493,7 @@
                                                      </div>
                                                        <!-- right side start -->
                                                      <div class="row mt-3" style="font-weight: 600;">
-                                                        <div class="col-2">Right</div>
+                                                        <div class="col-2" style="color: #ffffff; background: #ff5100;">Right</div>
                                                         <div class="col-2">SPH </div>
                                                         <div class="col-2">CYL </div>
                                                         <div class="col-2">AXIS </div>
@@ -588,7 +588,7 @@
 
                                                      <!-- left side start -->
                                                      <div class="row mt-3" style="font-weight: 600;">
-                                                        <div class="col-2">Left</div>
+                                                        <div class="col-2" style="color: #ffffff; background: #ff5100;">Left</div>
                                                         <div class="col-2">SPH </div>
                                                         <div class="col-2">CYL </div>
                                                         <div class="col-2">AXIS </div>
@@ -1062,7 +1062,7 @@
                                                          </div>
                                                            <!-- right side start -->
                                                          <div class="row mt-3" style="font-weight: 600;">
-                                                            <div class="col-2">Right</div>
+                                                            <div class="col-2" style="color: #ffffff; background: #ff5100;">Right</div>
                                                             <div class="col-2">SPH </div>
                                                             <div class="col-2">CYL </div>
                                                             <div class="col-2">AXIS </div>
@@ -1154,7 +1154,7 @@
     
                                                          <!-- left side start -->
                                                          <div class="row mt-3" style="font-weight: 600;">
-                                                            <div class="col-2">Left</div>
+                                                            <div class="col-2" style="color: #ffffff; background: #ff5100;">Left</div>
                                                             <div class="col-2">SPH </div>
                                                             <div class="col-2">CYL </div>
                                                             <div class="col-2">AXIS </div>
