--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -15,9 +15,7 @@
     html body {
         /* zoom: 95%; */
         zoom: 70%;
-
     }
-    
 </style>
 <body>
     <% if(data.length !==0){ data.forEach(function (i, index) { %>
@@ -27,7 +25,7 @@
                     <tr>
                         <th  style="width: 140px; padding: 0;">
                             <div
-                                style="font-size: 16px; font-weight: 600;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
+                                style="font-size: 16px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
                                 <%=i.BarcodeName%>
                             </div>
                             <div>
@@ -43,19 +41,19 @@
                         </th>
                         <th  style="width: 300px;">
                             <div
-                                style="text-align: left; font-size: 22px; font-weight: 600;  letter-spacing: 0px; margin-left: 130px;">
+                                style="text-align: left; font-size: 22px; font-weight: 600; font-family: verdana; letter-spacing: 0px; margin-left: 130px;">
                                            ADE  <%=i.RetailPrice%>    
                                      
                             </div>
                             <div
-                                style="text-align: left; font-size: 14px; font-weight: 600;letter-spacing: 0.1px;margin-left: 130px; ">
+                                style="text-align: left; font-size: 14px; font-weight: 600;letter-spacing: 0.1px;margin-left: 130px; font-family: verdana ;">
                                 (Inc. of all Taxes) </div>
                             <div
-                                style="text-align: left; font-size: 16px; font-weight: 600; margin-left: 130px;">
+                                style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 130px;">
                                 <%=i.ProductBrandName%>
                             </div>
                             <div
-                                style="text-align: left; font-size: 16px; font-weight: 600; margin-left: 130px;">
+                                style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 130px;">
                                 <%=i.ProductModelName%>
                             </div>
                         </th>
@@ -71,7 +69,7 @@
 
                                
                                 <div
-                                    style=" font-size: 18px; font-weight: 600; margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
+                                    style=" font-size: 18px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
                                     <%=i.BarcodeName%>
                                 </div>
                                 <div>
@@ -89,19 +87,19 @@
                             <th  style="width:800px;  padding: 0 !important; margin: 0 !important; ">
                                 <div style="padding-left: 280px; height: 125px; padding-top: 2px;">
                                 <div
-                                    style="text-align: left; font-size: 26px; font-weight: 600;  letter-spacing: 0px; ">
+                                    style="text-align: left; font-size: 26px; font-weight: 600; font-family: verdana; letter-spacing: 0px; ">
                                                MRP  <%=i.RetailPrice%>    
                                          
                                 </div>
                                 <div
-                                    style="text-align: left; font-size: 14px; font-weight: 600;letter-spacing: 0.1px; ">
+                                    style="text-align: left; font-size: 14px; font-weight: 600;letter-spacing: 0.1px; font-family: verdana ;">
                                     (Inc. of all Taxes) </div>
                                 <div
-                                    style="text-align: left; font-size: 16px; font-weight: 600; ">
+                                    style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;">
                                     <%=i.ProductBrandName%>
                                 </div>
                                 <div
-                                    style="text-align: left; font-size: 16px; font-weight: 600; ">
+                                    style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;">
                                     <%=i.ProductModelName%>
                                 </div>
                             </div>
@@ -115,7 +113,7 @@
                 <tr>
                     <th  style="width: 140px; padding: 0;">
                         <div
-                            style="font-size: 16px; font-weight: 600; margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
+                            style="font-size: 16px; font-weight: 600; font-family: verdana;margin-top: 0px; text-align: center; margin-top:6px; padding-bottom:1px; ">
                             <%=i.BarcodeName%>
                         </div>
                         <div>
@@ -131,7 +129,7 @@
                     </th>
                     <th  style="width: 200px;">
                         <div
-                            style="text-align: left; font-size: 22px; font-weight: 600;  letter-spacing: 0px; margin-left: 18px;">
+                            style="text-align: left; font-size: 22px; font-weight: 600; font-family: verdana; letter-spacing: 0px; margin-left: 18px;">
                             <% if (data.CompanyID !== 2){%>
                                        MRP  <%=i.RetailPrice%>    
                               <%}%>
@@ -140,14 +138,14 @@
                               <%}%>            
                         </div>
                         <div
-                            style="text-align: left; font-size: 14px; font-weight: 600;letter-spacing: 0.1px;margin-left: 18px; ">
+                            style="text-align: left; font-size: 14px; font-weight: 600;letter-spacing: 0.1px;margin-left: 18px; font-family: verdana ;">
                             (Inc. of all Taxes) </div>
                         <div
-                            style="text-align: left; font-size: 16px; font-weight: 600; margin-left: 18px;">
+                            style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 18px;">
                             <%=i.ProductBrandName%>
                         </div>
                         <div
-                            style="text-align: left; font-size: 16px; font-weight: 600; margin-left: 18px;">
+                            style="text-align: left; font-size: 16px; font-weight: 600; font-family: verdana;margin-left: 18px;">
                             <%=i.ProductModelName%>
                         </div>
                     </th>
