--- a/server/views/invoice.ejs
+++ b/server/views/invoice.ejs
@@ -516,7 +516,7 @@
             <!-- You've Saved  start -->
             <% if (data.shopdetails.CompanyID !== 20){%>
             <% if (data.SavedDiscount !== 0){%>
-            <div style="width: 100%; height: 400px;">
+            <div style="width: 100%; height: 50px;">
                 <table style="width:30%; float:right">
                     <thead>
                         <tr>
@@ -528,6 +528,19 @@
                 </table>
             </div>
             <%}%>
+            <%}%>
+            <% if (data.company.ID === 93){%>
+            <div style="width: 100%; height: 50px; margin-top: 10px;">
+                <table style="width:30%; float:right">
+                    <thead>
+                        <tr>
+                            <th
+                            <% %>  style="font-size:<%= data.CustomerFont %> ; line-height:<%= data.CustomerLineSpace %>;border-top-style: dotted ;   border-top-color: <%= data.Color %>; padding: 0px; margin:0px "> Signature
+                        </th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
             <%}%>
               <!-- You've Saved  end -->
 </body>
